apps/browserless/config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: browserless
  labels:
    name: browserless
    istio.io/dataplane-mode: ambient
