apps/browserless/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browserless
  namespace: browserless
  labels:
    app: browserless
spec:
  type: ClusterIP
  selector:
    app: browserless
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
